[tool.poetry]
name = "agentic-mvp-shared"
version = "0.1.0"
description = "Shared utilities for our project (created by Bob, edited by RandomCyberCoder)."
authors = ["yuki011121", "RandomCyberCoder"]
license = "MIT"
readme = "AUTHORS.md"
packages = [{ include = "shared" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
redis = "^6.2.0"
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"